--- a/Auth_App/templates/register.html
+++ b/Auth_App/templates/register.html
@@ -49,5 +49,8 @@
         <button type="submit">Submit</button>
         <br>
     </form>
+    <form action="{% url 'login'%}" method="GET">
+        <button>Login</button>
+    </form>
 </body>
 </html>
