--- a/ActivityManager/templates/home.html
+++ b/ActivityManager/templates/home.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome</title>
 </head>
 <body>
-    
+    <h1>Welcome {{User.first_name}} {{User.last_name}}</h1>
+    <form action="{% url 'logout' %}">
+        <button>Logout</button>
+    </form>
 </body>
 </html>
