--- a/Auth_App/templates/login.html
+++ b/Auth_App/templates/login.html
@@ -16,9 +16,9 @@
         <input type="password" name="password">
         <button type="submit">Submit</button>
     </form>
-    <form action="{% url 'register'%}" method="GET">
-        <button>Register</button>
-    </form>
+
+        <button><a href="{% url 'register' %}">Register</button>
+
     
 </body>
 </html>
