--- a/ActivityManager/templates/home.html
+++ b/ActivityManager/templates/home.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <h1>Welcome {{User.first_name}} {{User.last_name}}</h1>
+        <p>
 
+            <h3>Activities </h3>
+            <ul>
+            {% for activity in Activities %}
+            <li> {{ activity.title }} {{activity.date_time}} {{activity.Club}}<br><p>{{activity.act}}</p> </li>
+            {% endfor %}
+            </ul>
+
+        </p>
         <button><a href="{% url 'logout' %}">Logout</button>
 
 </body>
