--- a/ActivityManager/templates/create.html
+++ b/ActivityManager/templates/create.html
@@ -35,6 +35,7 @@
     <p>Note:Only those clubs are listed for which user has the right to create any activity. Each user can create a self activity </p>
     <button><a href="{% url 'self' %}">Self Activity</a></button>
     <button><a href="{% url 'home' %}">College Activity</a></button>
+    <button><a href="{% url 'profile' %}">View Profile</a></button>
     <button><a href="{% url 'logout' %}">Logout</button>
 </body>
 </html>
