--- a/ActivityManager/templates/self.html
+++ b/ActivityManager/templates/self.html
@@ -34,6 +34,7 @@
         </p>
         <button><a href="{% url 'create' %}">Create Activity</a></button>
         <button><a href="{% url 'home' %}">College Activity</a></button>
+        <button><a href="{% url 'profile' %}">View Profile</a></button>
         <button><a href="{% url 'logout' %}">Logout</button>
 
 </body>
