--- a/ActivityManager/templates/create.html
+++ b/ActivityManager/templates/create.html
@@ -1,41 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Activity</title>
-</head>
-<body>
-    <h1>Create Activity</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="club">Club of Event</label>
-        <select name="club">
-            <option value="self">Self Activity</option>
-            {% for club in clubs %}
-            <option value="{{club.club_id}}">{{club}}</option>
-            {% endfor %}
-        </select>
-        <label for="title">Title</label>
-        <input type="text" name="title">
-        <label for="act">Activity</label>
-        <input type="text" name="act">
-        <label for="venue">Venue</label>
-        <select name="venue">
-            <option value="self">Self Activtiy</option>
-            {% for venue in venues %}
-            <option value="{{ venue.venue_Id}}">{{venue}}</option>
-            {% endfor %}
-        </select>
-        <label for="date">Date and Time</label>
-        <input type="datetime-local" name="date">
-        <button type="submit">Submit</button>
-    </form>
-    <p>Note:Only those clubs are listed for which user has the right to create any activity. Each user can create a self activity </p>
-    <button><a href="{% url 'self' %}">Self Activity</a></button>
-    <button><a href="{% url 'home' %}">College Activity</a></button>
-    <button><a href="{% url 'profile' %}">View Profile</a></button>
-    <button><a href="{% url 'logout' %}">Logout</button>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+    
+        <section class="bg-gray-50 dark:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 w-full" >
+            <div class="flex flex-col items-center  px-6 py-8 mx-auto md:h-screen lg:py-0 overflow-auto">
+                <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+                    <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
+                    CollegeMitra   
+                </a>
+                <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+                    <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+                        <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                            Create an activity
+                        </h1>
+                        <form class="space-y-4 md:space-y-6" method="post" >
+                            {% csrf_token %}
+
+                            <div>
+                                <label for="club" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Club Name:</label>
+                                <div class="flex justify-center">
+                                    <div class="mb-3 xl:w-96">
+                                      <select class="form-select appearance-none
+                                        block
+                                        w-full
+                                        px-3
+                                        py-1.5
+                                        text-base
+                                        font-normal
+                                        text-gray-700
+                                        bg-white bg-clip-padding bg-no-repeat
+                                        border border-solid border-gray-300
+                                        rounded
+                                        transition
+                                        ease-in-out
+                                        m-0
+                                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" aria-label="Default select example" name="club">
+                                        <option value="self">Self Activity</option>
+                                        {% for i in clubs %}
+                                        <option value={{ i.club_id }}>{{ i }}</option>
+                                        {% endfor %} 
+                                      </select>
+                                    </div>
+                                  </div>
+                            </div>
+            
+                           
+
+                            <div class="basis-1/2">
+
+                                <label for="title" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Activity Title</label>
+                                <input type="text" name="title" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Roll" required="">
+                            </div>
+                            <div class="basis-1/2">
+                                <label for="act" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
+                                <input type="text" name="act" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Roll" required="">
+                            </div>
+
+
+                          
+                            
+                            <div>
+                                <label for="venue" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Venue Name:</label>
+                                <div class="flex justify-center">
+                                    <div class="mb-3 xl:w-96">
+                                      <select class="form-select appearance-none
+                                        block
+                                        w-full
+                                        px-3
+                                        py-1.5
+                                        text-base
+                                        font-normal
+                                        text-gray-700
+                                        bg-white bg-clip-padding bg-no-repeat
+                                        border border-solid border-gray-300
+                                        rounded
+                                        transition
+                                        ease-in-out
+                                        m-0
+                                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" aria-label="Default select example" name="venue">
+                                        <option value="self-activity">Self Activity</option>
+                                        {% for i in venues %}
+                                        <option value={{ i.venue_Id }}>{{ i }}</option>
+                                        {% endfor %} 
+                                      </select>
+                                    </div>
+                                  </div>
+                            </div>
+
+                            <div class="basis-1/2">
+                                <label for="date" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Time and Date:</label>
+                                <input type="datetime-local" name="date" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"  required="True">
+                            </div>
+
+                          
+                            
+                            <div class="flex items-start">
+                                <div class="flex items-center h-5">
+                                    <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">
+                                </div>
+                                <div class="ml-3 text-sm">
+                                    <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-primary-600 hover:underline dark:text-primary-500" href="#">Terms and Conditions</a></label>
+                                </div>
+                            </div>
+                            <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create the activity</button>
+    
+                        </form>
+                    </div>
+                </div>
+            </div>
+            </section>
+{% endblock %}
