--- a/ActivityManager/templates/profiles.html
+++ b/ActivityManager/templates/profiles.html
@@ -1,29 +1,176 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{user.username}}</title>
-</head>
-<body>
-    <div class = "info">
-        <ul>
-            <li>Name = {{user.name}}</li>
-            <li>Branch = {{user.branch.branch_name}}</li>
-            <li>Roll = {{user.roll_no}}</li>
-            <li>Hostel = {{user.hostel.hostel_name}}</li>
-            <li>Room No. = {{user.room_no}}</li>
-            <li>Email = {{user.email}}</li>
-            <li>Phone = {{user.phone_number}}</li>
-        </ul>
-    <button><a href="{% url 'self' %}">Self Activity</a></button>
-    <button><a href="{% url 'edit' %}">Edit Profile Details</a></button>
-    <button><a href="{% url 'home' %}">College Activity</a></button>
-    <button><a href="{% url 'logout' %}">Logout</button>
-       
-    </div>
-   
+{% extends 'base.html'%}
 
-</body>
-</html>
+<link rel="shortcut icon" href="./assets/img/favicon.ico" />
+<link
+  rel="apple-touch-icon"
+  sizes="76x76"
+  href="./assets/img/apple-icon.png"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
+/>
+
+{% block content %}
+
+<link rel="shortcut icon" href="./assets/img/favicon.ico" />
+<link
+  rel="apple-touch-icon"
+  sizes="76x76"
+  href="./assets/img/apple-icon.png"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+/>
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
+/>
+    <title>Profile </title>
+  </head>
+  <body class="text-gray-800 antialiased">
+    <main class="profile-page">
+      <section class="relative block" style="height: 500px;">
+        <div
+          class="absolute  w-full h-full bg-gray-50 dark:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 "
+         
+        >
+          <span
+            id="blackOverlay"
+            class="w-full h-full absolute opacity-50 bg-black"
+          ></span>
+        </div>
+        <div
+          class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
+          style="height: 70px;"
+        >
+          <svg
+            class="absolute bottom-0 overflow-hidden"
+            xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="none"
+            version="1.1"
+            viewBox="0 0 2560 100"
+            x="0"
+            y="0"
+          >
+            <polygon
+              class="text-gray-300 fill-current"
+              points="2560 0 2560 100 0 100"
+            ></polygon>
+          </svg>
+        </div>
+      </section>
+      <section class="relative py-16 bg-gray-300" id="qw">
+        <div class="container mx-0 px-4">
+          <div
+            class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64"
+          >
+            <div class="px-6">
+              <div class="flex flex-wrap justify-center">
+                <div
+                  class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center"
+                >
+                  <div class="relative">
+                    <img
+                      alt="..."
+                      src="https://source.unsplash.com/100x100/?portrait"
+                      class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16"
+                      style="max-width: 150px;"
+                    />
+                  </div>
+                </div>
+                <div
+                  class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center"
+                >
+                  <div class="py-6 px-3 mt-32 sm:mt-0">
+                    <button
+                      class="bg-pink-500 active:bg-pink-600 uppercase text-white font-bold hover:shadow-md shadow text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1"
+                      type="button"
+                      style="transition: all 0.15s ease 0s;"
+                    >
+                      Connect
+                    </button>
+                  </div>
+                </div>
+                <div class="w-full lg:w-4/12 px-4 lg:order-1">
+                  <div class="flex justify-center py-4 lg:pt-4 pt-8">
+                    <div class="mr-4 p-3 text-center">
+                      <span
+                        class="text-xl font-bold block uppercase tracking-wide text-gray-700"
+                        >{{club}}</span
+                      ><span class="text-sm text-gray-500">clubs</span>
+                    </div>
+                    <div class="mr-4 p-3 text-center">
+                      <span
+                        class="text-xl font-bold block uppercase tracking-wide text-gray-700"
+                        >{{act}}</span
+                      ><span class="text-sm text-gray-500">Activities</span>
+                    </div>
+                    <div class="lg:mr-4 p-3 text-center">
+                      <span
+                        class="text-xl font-bold block uppercase tracking-wide text-gray-700"
+                        >{{self}}</span
+                      ><span class="text-sm text-gray-500">Self Activities</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="text-center mt-12">
+                <h3
+                  class="text-4xl font-semibold leading-normal  text-gray-800 mb-2"
+                >
+                  {{user.name}}
+                </h3>
+                <div
+                  class="text-sm leading-normal mt-0 mb-2 text-gray-500 font-bold uppercase"
+                >
+                  <i
+                    class="fas fa-map-marker-alt mr-2 text-lg text-gray-500"
+                  ></i>
+                  Room {{user.room_no}}, {{user.hostel.hostel_name}}
+                </div>
+                <div class="mb-2 text-gray-700 mt-10">
+                    <i class="fas fa-phone mr-2 text-lg text-gray-500"></i
+                    >{{user.phone_number}}
+                </div>
+                <div class="mb-2 text-gray-700 mt-10">
+                    <i class="fas fa-envelope mr-2 text-lg text-gray-500"></i
+                    >{{user.email}}
+                </div>
+                <div class="mb-2 text-gray-700 mt-10">
+                  <i class="fas fa-briefcase mr-2 text-lg text-gray-500"></i
+                  >{{user.branch}} -Indian Institute of Technology 
+                </div>
+                <div class="mb-2 text-gray-700">
+                  <i class="fas fa-university mr-2 text-lg text-gray-500"></i
+                  >Banaras Hindu University, Varanasi
+                </div>
+              </div>
+              <div class="mt-10 py-10 border-t border-gray-300 text-center">
+                <div class="flex flex-wrap justify-center">
+                  <div class="w-full lg:w-9/12 px-4">
+                    <p class="mb-4 text-lg leading-relaxed text-gray-800">
+                      An artist of considerable range, Jenna the name taken by
+                      Melbourne-raised, Brooklyn-based Nick Murphy writes,
+                      performs and records all of his own music, giving it a
+                      warm, intimate feel with a solid groove structure. An
+                      artist of considerable range.
+                    </p>
+                    <a href="#pablo" class="font-normal text-pink-500"
+                      >Show more</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+{% endblock %}
+
+ 
