--- a/ActivityManager/templates/self.html
+++ b/ActivityManager/templates/self.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-</head>
-<body>
-    <h1>Welcome {{User.first_name}} {{User.last_name}}</h1>
-        <p>
+{% extends 'base.html' %}
+
+{% block content %}
+        <!-- <p>
 
             <h3>Activities </h3>
             <ul>
-            {% for activity in selfacts %}
+            {% for activity in Activities %}
             <li> {{ activity.title }} 
                 {{activity.date_time}} 
                 {{activity.Club}}
@@ -31,11 +24,65 @@
             {% endfor %}
             </ul>
 
-        </p>
-        <button><a href="{% url 'create' %}">Create Activity</a></button>
-        <button><a href="{% url 'home' %}">College Activity</a></button>
-        <button><a href="{% url 'profile' %}">View Profile</a></button>
-        <button><a href="{% url 'logout' %}">Logout</button>
+        </p> -->
+        
+        <!-- component -->
+                <div class="flex flex-wrap space-x-3 space-y-3 h-full">
+                    {% for activity in selfacts %}
+  
+                <section
+                class=" rotate-0 transform space-y-6 rounded-2xl bg-gray-100 p-6 duration-300"
+                >
+                
+                <!-- year.month.day -->
+                <header class="text-center text-xl font-extrabold text-gray-600">
+                    {{activity.date_time.date}}
+                </header>
+            
+                <div>
+                    <p class="text-center text-5xl font-extrabold text-gray-900">
+                    {{activity.title}} <br />(Self Activity)
+                    </p>
+                    <p class="text-center text-4xl font-extrabold text-[#FE5401]">{{activity.date_time.time}}</p>
+                    <a class="visible hover:invisible" >
+                        <span class="group-hover/edit:text-gray-700">{{activty.act}}</span>
+                    </a>
+                </div>
+            
+                <footer class="mb-10 ">
+                    
+                    <p>
+                        {% if activity.date_time.date == now %}
+                        <button
+                        class="items-center rounded-lg bg-[#FF7308] px-4 py-2.5 text-xl font-bold text-white hover:bg-[#E56707]"
+                    >    TODAY </button>
+                                {% elif activity.date_time.date > now %}
+                                <button
+                                class="items-center rounded-lg bg-green-600 px-4 py-2.5 text-xl font-bold text-white hover:bg-green-800"
+                            >         
+                                UPCOMING </button>
+                                {% else %}
+                                <button
+                                class="items-center rounded-lg bg-red-500 px-4 py-2.5 text-xl font-bold text-white hover:bg-red-800"
+                            >
+                                PASSED </button>
+                                {% endif %}
+                    </p>
+                    <!-- <svg
+                        class="h-9 w-9"
+                        fill="currentColor"
+                        viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg"
+                    > -->
+                        
+                    
+                    
+                </footer>
+                </section>
+                {% endfor %}
+            </div>
+           
+        </div>
 
-</body>
-</html>
+
+{% endblock content %}
